Add /ht/agencies and /ht/states API endpoints
These are two new endpoints for retrieving data from the ht_agency and
ht_summary tables respectively. The first endpoint returns agency
summary counts for human trafficking. The second returns counts rolled
up to the state level
